<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".RecognitionResult">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageView2"
            android:padding="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/logo_without_bg" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/recognition_convo"
            android:textSize="25sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:text="@string/recognition_title"
        android:fontFamily="@font/lemon"
        android:textSize="25sp"
        android:paddingBottom="15dp"
        />

    <ImageView
        android:id="@+id/result_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintTop_toBottomOf="@id/page_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:foregroundGravity="center"
        android:layout_marginBottom="25dp"
        app:srcCompat="@drawable/sample_food_plate"
        />

    <TableLayout
        android:id="@+id/recognized_food_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:layout_margin="10dp"
        android:divider="@drawable/divider_row"
        android:showDividers="middle"
        android:dividerPadding="1dp"
        android:background="@drawable/table_background"
        app:layout_constraintTop_toBottomOf="@+id/result_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <TableRow
            android:layout_width="match_parent"
            android:background="@drawable/table_top_row_bg"
            android:divider="@drawable/divider_column"
            android:showDividers="middle"
            android:dividerPadding="1dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/number"
                android:textStyle="bold"
                android:textSize="17sp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:gravity="center"
                android:textColor="@color/grayText"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/food_name"
                android:textSize="17sp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/grayText"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="17sp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/grayText"/>

        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.7"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/recognized_food_items"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/cancel"
            android:textSize="17sp"
            android:textColor="@color/grayText"
            android:layout_gravity="start"
            android:layout_marginEnd="30dp"/>
        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/confirm"
            android:textSize="17sp"
            android:textColor="@color/grayText"
            android:layout_gravity="end"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>