<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".AnalysisResult">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageView2"
            android:padding="5dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/logo_without_bg" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:gravity="center"
            android:text="@string/analysis_convo"
            android:textSize="@dimen/textSizeHeader" />
    </LinearLayout>

    <TextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:text="@string/analysis_title"
        android:fontFamily="@font/lemon"
        android:textSize="@dimen/textSizePageName" />

    <ImageView
        android:id="@+id/result_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintTop_toBottomOf="@id/page_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:foregroundGravity="center"
        app:srcCompat="@drawable/sample_food_plate" />

    <HorizontalScrollView
        android:id="@+id/table_header_sv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toBottomOf="@id/result_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/analysis_result_sv"
        android:fillViewport="true"
        android:scrollbars="none">

        <TableLayout
            android:id="@+id/table_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_row"
            android:showDividers="middle"
            >
            <TableRow
                android:layout_width="match_parent"
                android:background="@drawable/table_top_row_bg"
                android:divider="@drawable/divider_column"
                android:showDividers="middle"
                android:dividerPadding="1dp">

                <TextView
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:text="@string/food_name"
                    android:textStyle="bold"
                    android:textSize="@dimen/textSizeContent"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="@color/grayText"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/calories"
                    android:textSize="@dimen/textSizeContent"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="@color/grayText"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/carbohydrate"
                    android:textSize="@dimen/textSizeContent"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="@color/grayText"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/protein"
                    android:textSize="@dimen/textSizeContent"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="@color/grayText"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fat"
                    android:textSize="@dimen/textSizeContent"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="@color/grayText"/>
            </TableRow>

        </TableLayout>
    </HorizontalScrollView>

    <ScrollView
        android:id="@+id/analysis_result_sv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="0dp"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintTop_toBottomOf="@id/table_header_sv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttons"
        android:fillViewport="true"
        >
        <HorizontalScrollView
            android:id="@+id/table_content_sv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="none">

            <TableLayout
                android:id="@+id/table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:divider="@drawable/divider_row"
                android:showDividers="middle"
                android:background="@drawable/table_background">
                <TableRow
                    android:layout_width="match_parent"
                    android:divider="@drawable/divider_column"
                    android:showDividers="middle">

                    <TextView
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:textStyle="bold"
                        android:textSize="@dimen/textSizeContent"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        />

                    <TextView
                        android:id="@+id/total_calories"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="@dimen/textSizeContent"
                        android:textStyle="bold"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp" />

                    <TextView
                        android:id="@+id/total_carb"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="@dimen/textSizeContent"
                        android:textStyle="bold"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp" />

                    <TextView
                        android:id="@+id/total_protein"

                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="@dimen/textSizeContent"
                        android:textStyle="bold"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp" />

                    <TextView
                        android:id="@+id/total_fat"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="@dimen/textSizeContent"
                        android:textStyle="bold"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp" />
                </TableRow>
            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>



    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/analysis_result_sv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/cancel"
            android:textSize="@dimen/textSizeContent"
            android:textColor="@color/grayText"
            android:layout_gravity="start"
            android:layout_marginEnd="30dp"/>
        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/add_meal_to_tracking"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="@dimen/textSizeContent"
            android:textColor="@color/grayText"
            android:layout_gravity="end"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
